# simple_robot_arm

simple_robot_description/: CMakeLists.txt  package.xml
simple_robot_description/launch/: display.launch.py
simple_robot_description/rviz/: rviz_bot.rviz
simple_robot_description/urdf/: simple_robot.urdf.xacro  simple_robot_description.xacro
simple_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
simple_robot_moveit_config/config/: initial_positions.yaml  moveit.rviz  simple_robot.ros2_control.xacro  simple_robot.srdf  simple_robot.urdf.xacro
simple_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
simple_robot_moveit_config/src/: move_arm.cpp
